bug na inicialização